--- a/src/classes/RuleCriterionMatcher.cls
+++ b/src/classes/RuleCriterionMatcher.cls
@@ -15,53 +15,54 @@ public with sharing class RuleCriterionMatcher {
     	 
     } 
 	
-	
-	public static Cadence__c assignCadenceToNotAssignedParticipant(Map<Id, Cadence__c> cadenceMap, SObject partObj, SObject parentObj, String objName) {
-	 
-		List<Cadence__c> matchingCadences = new List<Cadence__c>(); 
-		Cadence__c cadToUpdate;
+    public static Cadence__c assignCadenceToNotAssignedParticipant(Map<Id, Cadence__c> cadenceMap, SObject partObj, SObject parentObj, String objName) {
+        List<Cadence__c> matchingCadences = new List<Cadence__c>(); 
+        Cadence__c cadToUpdate;
         Map<Id, CriterionSet> cadCriterion = New Map<Id, CriterionSet>();
         Map<Id, CriterionSet> cadExitCriterion = New Map<Id, CriterionSet>();
+        
         if (cadenceMap != null){
             cadCriterion = RuleCriterionMatcherHelper.getCadenceWiseCriterions(cadenceMap.values(), CadenceConstants.CRITERION_TYPE_ENTRY);
             cadExitCriterion = RuleCriterionMatcherHelper.getCadenceWiseCriterions(cadenceMap.values(), CadenceConstants.CRITERION_TYPE_EXIT);
         }
-		
-		//Getting matching cadences	
-		for(Id cadId : cadCriterion.keySet()) {
-			Boolean isExitCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(partObj, parentObj, cadExitCriterion.get(cadId));
-			if(isExitCriterionMatches) {
-				continue;
-			}
-			Boolean isCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(partObj, parentObj, cadCriterion.get(cadId));
-    		if(isCriterionMatches) {
-    			matchingCadences.add(cadenceMap.get(cadId));
-    		} 
-		}
-
-		//Return if no matching cadence found 
-		if(matchingCadences.isEmpty()) {
-			return null;
-		}
-		
-		//Setting matched cadence
-		if(matchingCadences.size() == 1) {
-			cadToUpdate = matchingCadences.get(0);
-		} else {
-			cadToUpdate = RuleCriterionMatcherHelper.getPriorityCadence(matchingCadences);
-		}
-
-		//Setting matching cadence data to participant
-		partObj.put(nameSpace+'Cadence_Id__c', cadToUpdate.Id); 
-		if(cadToUpdate.Participent_Activation__c.equalsIgnoreCase(CadenceConstants.PARTICIPANT_ACTIVATION_AUTOMATIC)) {
-			partObj.put(nameSpace+'isActivated__c', true);
+        
+        //Getting matching cadences	
+        for(Id cadId : cadCriterion.keySet()) {
+            Boolean isExitCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(partObj, parentObj, cadExitCriterion.get(cadId));
+            if(isExitCriterionMatches) {
+                continue;
+            }
+            Boolean isCriterionMatches = RuleCriterionMatcherHelper.cadenceCriterionMatches(partObj, parentObj, cadCriterion.get(cadId));
+            System.debug('Test#1234567:'+isCriterionMatches);
+            if(isCriterionMatches) {
+                matchingCadences.add(cadenceMap.get(cadId));
+            } 
+        }
+        
+        //Return if no matching cadence found 
+        if(matchingCadences.isEmpty()) {
+            return null;
+        }
+        
+        //Setting matched cadence
+        if(matchingCadences.size() == 1) {
+            cadToUpdate = matchingCadences.get(0);
+        } else {
+            cadToUpdate = RuleCriterionMatcherHelper.getPriorityCadence(matchingCadences);
+        }
+        
+        //Setting matching cadence data to participant
+        partObj.put(nameSpace+'Cadence_Id__c', cadToUpdate.Id); 
+        
+        if(cadToUpdate.Participent_Activation__c.equalsIgnoreCase(CadenceConstants.PARTICIPANT_ACTIVATION_AUTOMATIC)) {
+            partObj.put(nameSpace+'isActivated__c', true);
             partObj.put(nameSpace+'EntranceCriteria_Matched_Date__c', System.now());
-		} else {
-			partObj.put(nameSpace+'isActivated__c', false);
-		}
-		 
-		return cadToUpdate;  
-	} 
+        } else {
+            partObj.put(nameSpace+'isActivated__c', false);
+        }
+        
+        return cadToUpdate;  
+    }
 	  
 	public static SObject matchExitCriterion(Cadence__c cad, SObject partObj, SObject parentObj, String objName) {
 		
@@ -167,7 +168,7 @@ public with sharing class RuleCriterionMatcher {
 		if(partActions == null || partActions.isEmpty()) {
 			return actionsToPerform;
 		}
-		
+		System.debug('cad getMatchingParticipantActions'+cad);
 		Map<Id, CadenceAction__c> allCadActionMap = new Map<Id, CadenceAction__c>(cad.CadenceActions__r);
 		List<CadenceAction__c> remainingCadActions = new List<CadenceAction__c>();
 		
@@ -197,5 +198,4 @@ public with sharing class RuleCriterionMatcher {
 		}
 		return actionsToPerform;
 	}
-	
 }
