--- a/src/classes/CadenceActionsController.cls
+++ b/src/classes/CadenceActionsController.cls
@@ -1,20 +1,20 @@
 public class CadenceActionsController {
     public static String nameSpace = CadenceConstants.NAMESPACE;
     @AuraEnabled
-    public static CadenceActionWrapper getActionList(){
+    public static CadenceActionWrapper getActionList(String type){
         List<action__C> actionList = [Select id, Name, type__C, Activation_Type__c from Action__C];
+        
         CadenceActionWrapper wrapperObj = new CadenceActionWrapper();
         wrapperObj.actionList = actionList;
         wrapperObj.actionTypeList = getActionTypeList(actionList);
-        wrapperObj.contactCriListSA = CadenceController.getFieldsForSA(CadenceConstants.CONTACT_OBJECT_NAME);
-        wrapperObj.leadCriListSA = CadenceController.getFieldsForSA(CadenceConstants.LEAD_OBJECT_NAME);
+        wrapperObj.fieldList = CadenceController.getFieldsForSA(type);
+        
         return wrapperObj;
-    } 
+    }  
     public class CadenceActionWrapper{
         @AuraEnabled public List<action__C> actionList;
         @AuraEnabled public List<string> actionTypeList;
-        @AuraEnabled public List<Criterion>  contactCriListSA;
-        @AuraEnabled public List<Criterion>  leadCriListSA;
+        @AuraEnabled public List<CriterionWrapper> fieldList = New List<CriterionWrapper>{New CriterionWrapper()};
     }
     public static List<String> getActionTypeList(List<Action__C> actionList){
         List<String> actionTypeList = new List<String>();
@@ -40,22 +40,4 @@ public class CadenceActionsController {
         pList = new List<String>();           
         }
     }
-    
-    public class CadenceActionWrapperNew{
-        @AuraEnabled public List<action__C> actionList;
-        @AuraEnabled public List<string> actionTypeList;
-        @AuraEnabled public List<CriterionWrapper> fieldList = New List<CriterionWrapper>{New CriterionWrapper()};
-    }
-    
-    @AuraEnabled
-    public static CadenceActionWrapperNew getActionListNew(String type){
-        System.debug('getActionListNew:Type='+type);
-        List<action__C> actionList = [Select id, Name, type__C, Activation_Type__c from Action__C];
-        CadenceActionWrapperNew wrapperObj = new CadenceActionWrapperNew();
-        wrapperObj.actionList = actionList;
-        wrapperObj.actionTypeList = getActionTypeList(actionList);
-        wrapperObj.fieldList = CadenceController.getFieldsForSANew(type);
-        return wrapperObj;
-    } 
- 
 }
